<resources>
    <string name="app_name">Student Chef</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="GPSAlertDialogTitle"> Location </string>
    <string name="GPSAlertDialogMessage">Please Switch on location</string>
    <string name="cancel">cancel</string>
    <string name="please_login">Please login first</string>
    <string name="nav_item_directories">Contact</string>
    <string name="nav_item_addnetwork">Chat</string>
    <string name="nav_item_settings">Create Group</string>
    <string name="nav_item_help">Settings</string>
    <string name="nav_item_about">About</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="submit">submit</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_directories</item>
        <item>@string/nav_item_addnetwork</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_help</item>
    </string-array>
    <string name="proceed">proceed</string>
    <string name="checkbox1">By checking this box you agree that any content submitted by you is your own work and does not contain any copyrighted material.</string>
    <string name="checkbox2">By check this box you agree to the terms &amp; condition</string>
    <string name="para_one">Please read these Terms and Conditions (&quot;Terms&quot;, &quot;Terms and Conditions&quot;) carefully before using the Student Chef app (the &quot;Service&quot;) operated by Student Chef (&quot;us&quot;, &quot;we&quot;, or &quot;our&quot;).\n\nYour access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</string>
    <string name="para_two">By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.</string>
    <string name="para_three">Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material (&quot;Content&quot;). You are responsible for the Content that you post to the Service, including its legality, reliability, and appropriateness.\n\nBy posting Content to the Service, you grant us the right and license to use, modify, publicly perform, publicly display, reproduce, and distribute such Content on and through the Service. You retain any and all of your rights to any Content you submit, post or display on or through the Service and you are responsible for protecting those rights. You agree that this license includes the right for us to make your Content available to other users of the Service, who may also use your Content subject to these Terms.\n\nYou represent and warrant that: (i) the Content is yours (you own it) or you have the right to use it and grant us the rights and license as provided in these Terms, and (ii) the posting of your Content on or through the Service does not violate the privacy rights, publicity rights, copyrights, contract rights or any other rights of any person.</string>
    <string name="para_four">We respect the intellectual property rights of others. It is our policy to respond to any claim that Content posted on the Service infringes the copyright or other intellectual property infringement (&quot;Infringement&quot;) of any person.\n\nIf you are a copyright owner, or authorized on behalf of one, and you believe that the copyrighted work has been copied in a way that constitutes copyright infringement that is taking place through the Service, you must submit your notice in writing to the attention of &quot;Copyright Infringement&quot; of contact@studentchef.co.uk and include in your notice a detailed description of the alleged Infringement.\n\nIn cases where there are conflicting claims to the ownership of Copyright, it is our policy to air on the side of removing materials from our Service.</string>
    <string name="para_five">Complaints under the Copyrights, Designs and Patents Act 1988, and European Commerce Directive 2000</string>
    <string name="para_six">If you wish to make a complaint/request that certain material be taken down, please send a request in writing to our Notice and Takedown Officer.\n\nWe, Student Chef are committed to ensuring that the material displayed on our Service is lawful and in accordance with our UK and EU Copyright Law.\n\nTo help us deal with your complaint as quickly as possible, please include the following information in your correspondence and mark it as &quot;URGENT&quot;:\n\n1. Your contact details - including your name, email address and daytime telephone number.\n\n2. Identify the material in question - please include sufficient detail to enable us to identify the material complained of.\n\n3. The reasons for your objection.\nWe will review each objection on its merits and pending our inquiries, may remove or disable access to the relevant material from our Service.\n\nWhere appropriate, you should include information relating to the status of the material in question (i.e. Where you hold a Trademark, or own the Copyright to an image). This will enable us to deal with your request promptly.\n\nYou can contact our Notice and Takedown Officer via email at contact@studentchef.co.uk</string>
    <string name="para_seven">The Service and its original content (excluding Content provided by users), features and functionality are and will remain the exclusive property of Student Chef and its licensors. The Service is protected by copyright, trademark, and other laws of both the United Kingdom and foreign countries. Our trademarks and trade dress may not be used in connection with any product or service without the prior written consent of Student Chef.\n\nWhen you upload content, you give to Student Chef a worldwide, non-exclusive, royalty-free, transferable licence (with right to sub-licence) to use, reproduce, distribute, prepare derivative works of, display, and perform that Content in connection with the provision of the Service and otherwise in connection with the provision of the Service and Student Chef business.</string>
    <string name="para_eight">Our Service may contain links to third-party web sites or services that are not owned or controlled by Student Chef.\n\nStudent Chef has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that Student Chef shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.\n\nWe strongly advise you to read the terms and conditions and privacy policies of any third-party web sites or services that you visit.</string>
    <string name="para_nine">You agree to defend, indemnify and hold harmless Student Chef and its licensee and licensors, and their employees, contractors, agents, officers and directors, from and against any and all claims, damages, obligations, losses, liabilities, costs or debt, and expenses(including but not limited to attorney\'s fees), resulting from or arising out of a) your use and access of the Service, by you or any person using your account and password; b) a breach of these Terms, or c) Content posted on the Service.</string>
    <string name="para_ten">In no event shall Student Chef, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from (i) your access to or use of or inability to access or use the Service; (ii) any conduct or content of any third party on the Service; (iii) any content obtained from the Service; and (iv) unauthorized access, use or alteration of your transmissions or content, whether based on warranty, contract, tort (including negligence) or any other legal theory, whether or not we have been informed of the possibility of such damage, and even if a remedy set forth herein is found to have failed of its essential purpose.</string>
    <string name="para_eleven">Your use of the Service is at your sole risk. The Service is provided on an &quot;AS IS&quot; and &quot;AS AVAILABLE&quot; basis. The Service is provided without warranties of any kind, whether express or implied, including, but not limited to, implied warranties of merchantability, fitness for a particular purpose, non-infringement or course of performance.\n\nStudent Chef, its subsidiaries, affiliates, and its licensors do not warrant that a) the Service will function uninterrupted, secure or available at any particular time or location; b) any errors or defects will be corrected; c) the Service is free of viruses or other harmful components; or d) the results of using the Service will meet your requirements.</string>
    <string name="para_twelve">Without limiting the generality of the foregoing and notwithstanding any other provision of these terms, under no circumstances will Student Chef ever be liable to you or any other person for any indirect, incidental, consequential, special, punitive or exemplary loss or damage arising from, connected with, or relating to your use of the Service, these Terms, the subject matter of these Terms, the termination of these Terms or otherwise, including but not limited to personal injury, loss of data, business, markets, savings, income, profits, use, production, reputation or goodwill, anticipated or otherwise, or economic loss, under any theory of liability (whether in contract, tort, strict liability or any other theory or law or equity), regardless of any negligence or other fault or wrongdoing (including without limitation gross negligence and fundamental breach) by Student Chef or any person for whom Student Chef is responsible, and even if Student Chef has been advised of the possibility of such loss or damage being incurred.</string>
    <string name="para_thirteen">These Terms shall be governed and construed in accordance with the laws of England and Wales, without regard to its conflict of law provisions.\n\nOur failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.</string>
    <string name="para_fourteen">We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.\n\nBy continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, you must stop using the service.</string>
    <string name="para_fifteen">Please refer to our Privacy Policy. You agree that they constitute part of these terms. You must read our Privacy Policy before you use the Service.</string>
    <string name="para_sixteen">If you have any questions about these Terms please contact us using the following email address: contact@studentchef.co.uk</string>
</resources>